// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<div
  class="wp-components-avatar css-1523pzc"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="wp-components-view css-qze8kw"
    data-g2-c16t="true"
    data-g2-component="View"
  >
    <div
      class="wp-components-view wp-components-text wp-components-initials css-8o2ae8"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
</div>
`;

exports[`props should render with a border 1`] = `
<div
  class="wp-components-avatar css-1m6lwu7"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="wp-components-view css-qze8kw"
    data-g2-c16t="true"
    data-g2-component="View"
  >
    <div
      class="wp-components-view wp-components-text wp-components-initials css-8o2ae8"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
  <div
    class="wp-components-aspect-ratio css-fvkpkj"
    data-g2-c16t="true"
    data-g2-component="AspectRatio"
  >
    <img
      alt="Elsa Oldenburg"
      class="css-j4t0j6"
      data-g2-c16t="true"
      data-g2-component="AvatarImage"
      src="/elsa.png"
    />
    <div
      aria-hidden="true"
      class="css-v1plal"
    />
  </div>
</div>
`;

exports[`props should render with a custom color 1`] = `
<div
  class="wp-components-avatar css-6mqtju"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="wp-components-view css-qze8kw"
    data-g2-c16t="true"
    data-g2-component="View"
  >
    <div
      class="wp-components-view wp-components-text wp-components-initials css-32gu8g"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
  <div
    class="wp-components-aspect-ratio css-fvkpkj"
    data-g2-c16t="true"
    data-g2-component="AspectRatio"
  >
    <img
      alt="Elsa Oldenburg"
      class="css-j4t0j6"
      data-g2-c16t="true"
      data-g2-component="AvatarImage"
      src="/elsa.png"
    />
    <div
      aria-hidden="true"
      class="css-v1plal"
    />
  </div>
</div>
`;

exports[`props should render with a custom size 1`] = `
<div
  class="wp-components-avatar css-11fvpid"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="wp-components-view css-qze8kw"
    data-g2-c16t="true"
    data-g2-component="View"
  >
    <div
      class="wp-components-view wp-components-text wp-components-initials css-1j3613t"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
</div>
`;

exports[`props should render with a custom small size + square 1`] = `
<div
  class="wp-components-avatar css-unxy2e"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="wp-components-view css-qze8kw"
    data-g2-c16t="true"
    data-g2-component="View"
  >
    <div
      class="wp-components-view wp-components-text wp-components-initials css-1g8a9bf"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
</div>
`;

exports[`props should render with a custom xSmall size + square 1`] = `
<div
  class="wp-components-avatar css-1nxtpyb"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="wp-components-view css-qze8kw"
    data-g2-c16t="true"
    data-g2-component="View"
  >
    <div
      class="wp-components-view wp-components-text wp-components-initials css-19qhcq0"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
</div>
`;

exports[`props should render with an alternate shape 1`] = `
<div
  class="wp-components-avatar css-1je1ird"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="wp-components-view css-qze8kw"
    data-g2-c16t="true"
    data-g2-component="View"
  >
    <div
      class="wp-components-view wp-components-text wp-components-initials css-32gu8g"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
  <div
    class="wp-components-aspect-ratio css-fvkpkj"
    data-g2-c16t="true"
    data-g2-component="AspectRatio"
  >
    <img
      alt="Elsa Oldenburg"
      class="css-j4t0j6"
      data-g2-c16t="true"
      data-g2-component="AvatarImage"
      src="/elsa.png"
    />
    <div
      aria-hidden="true"
      class="css-v1plal"
    />
  </div>
</div>
`;

exports[`props should render with an alternate size 1`] = `
<div
  class="wp-components-avatar css-1rxohjs"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="wp-components-view css-qze8kw"
    data-g2-c16t="true"
    data-g2-component="View"
  >
    <div
      class="wp-components-view wp-components-text wp-components-initials css-1j3613t"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
</div>
`;

exports[`props should render with animateOnImageLoad disabled 1`] = `
<div
  class="wp-components-avatar css-1523pzc"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="wp-components-view css-qze8kw"
    data-g2-c16t="true"
    data-g2-component="View"
  >
    <div
      class="wp-components-view wp-components-text wp-components-initials css-8o2ae8"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
  <div
    class="wp-components-aspect-ratio css-fvkpkj"
    data-g2-c16t="true"
    data-g2-component="AspectRatio"
  >
    <img
      alt="Elsa Oldenburg"
      class="css-j4t0j6"
      data-g2-c16t="true"
      data-g2-component="AvatarImage"
      src="/elsa.png"
    />
    <div
      aria-hidden="true"
      class="css-v1plal"
    />
  </div>
</div>
`;

exports[`props should render with image src 1`] = `
<div
  class="wp-components-avatar css-1523pzc"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="wp-components-view css-qze8kw"
    data-g2-c16t="true"
    data-g2-component="View"
  >
    <div
      class="wp-components-view wp-components-text wp-components-initials css-8o2ae8"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
  <div
    class="wp-components-aspect-ratio css-fvkpkj"
    data-g2-c16t="true"
    data-g2-component="AspectRatio"
  >
    <img
      alt="Elsa Oldenburg"
      class="css-j4t0j6"
      data-g2-c16t="true"
      data-g2-component="AvatarImage"
      src="/elsa.png"
    />
    <div
      aria-hidden="true"
      class="css-v1plal"
    />
  </div>
</div>
`;
